--- a/scripts/settings.json
+++ b/scripts/settings.json
@@ -1,15 +1,14 @@
 {
- "timestamp": 2053237674,
  "log": {
   "projectname": "jass-mu-zero",
   "entity": "andrinburli",
-  "group": "MuZero-MCTS-Experiment-4"
+  "group": "MuZero-MCTS-Experiment-0"
  },
  "agent": {
   "c_1": 1.25,
   "c_2": 19652,
   "dirichlet_alpha": 0.3,
-  "dirichlet_eps": 0.0,
+  "dirichlet_eps": 0.25,
   "iterations": 50,
   "mdp_value": true,
   "player_func": false,
@@ -17,7 +16,7 @@
   "discount": 1,
   "virtual_loss": 1,
   "n_search_threads": 1,
-  "temperature": 0.05,
+  "temperature": 1.0,
   "type": "mu-zero-mcts"
  },
  "optimization": {
@@ -57,7 +56,7 @@
   "min_trajectory_length": 10,
   "target_network_update": 100,
   "updates_per_step": 10,
-  "max_steps_per_second": 1.0,
+  "max_steps_per_second": 100.0,
   "total_steps": 100000,
   "weight_decay": 0.0001,
   "store_buffer": true,
@@ -77,7 +76,7 @@
   "fc_policy_layers": [ 512 ],
   "fc_reward_layers": [ 512 ],
   "fc_value_layers": [ 512 ],
-  "feature_extractor": "cnn-full",
+  "feature_extractor": "cnn-full-cheating",
   "num_blocks_representation": 5,
   "fcn_blocks_representation": 0,
   "num_blocks_dynamics": 5,
