--- a/scripts/settings.json
+++ b/scripts/settings.json
@@ -2,7 +2,7 @@
  "log": {
   "projectname": "jass-mu-zero",
   "entity": "andrinburli",
-  "group": "MuZero-MCTS-Experiment-0"
+  "group": "MuZero-MCTS-Experiment-1"
  },
  "agent": {
   "c_1": 1.25,
@@ -76,7 +76,7 @@
   "fc_policy_layers": [ 512 ],
   "fc_reward_layers": [ 512 ],
   "fc_value_layers": [ 512 ],
-  "feature_extractor": "cnn-full-cheating",
+  "feature_extractor": "cnn-full",
   "num_blocks_representation": 5,
   "fcn_blocks_representation": 0,
   "num_blocks_dynamics": 5,
